--- a/lib/jobify_web/components/layouts/root.html.heex
+++ b/lib/jobify_web/components/layouts/root.html.heex
@@ -27,6 +27,14 @@
         </li>
         <li>
           <.link
+            href={~p"/jobs"}
+            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
+          >
+            View Job Listings
+          </.link>
+        </li>
+        <li>
+          <.link
             href={~p"/users/log_out"}
             method="delete"
             class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
