--- a/lib/jobify_web/controllers/job_html/index.html.heex
+++ b/lib/jobify_web/controllers/job_html/index.html.heex
@@ -6,8 +6,20 @@
       <.button>New Job</.button>
     </.link>
     <% end %>
+    <.link href={~p"/jobs"}>
+      <.button>All Jobs</.button>
+    </.link>
   </:actions>
 </.header>
+
+<.simple_form :let={f} for={@changeset} action={~p"/jobs"} method="get">
+  <.input field={f[:page]} type="hidden" value="1"/>
+  <.input field={f[:industry]} type="select" label="Industry" options={@industries}/>
+  <:actions>
+    <.button>Filter</.button>
+  </:actions>
+</.simple_form>
+
 
 <.table id="jobs" rows={@jobs} row_click={&JS.navigate(~p"/jobs/#{&1}")}>
   <:col :let={job} label="Title"><%= job.title %></:col>
