redesigned auth and public routes

--- a/lib/jobify_web/components/layouts/root.html.heex
+++ b/lib/jobify_web/components/layouts/root.html.heex
@@ -46,7 +46,7 @@
       <% end %>
       <li>
         <.link
-          href={~p"/jobs"}
+          href={~p"/openings"}
           class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
         >
           View Job Listings
