--- a/lib/jobify_web/controllers/job_html/index.html.heex
+++ b/lib/jobify_web/controllers/job_html/index.html.heex
@@ -12,7 +12,7 @@
 
 <.simple_form :let={f} for={@changeset} action={~p"/jobs"} method="get">
   <.input field={f[:page]} type="hidden" value="1"/>
-  <.input field={f[:industry]} type="select" label="Industry" options={@industries}/>
+  <.input field={f[:industry]} type="select" label="Industry" options={@industries}  prompt=" "/>
   <:actions>
     <.button>Filter</.button>
   </:actions>
@@ -23,6 +23,7 @@
   <:col :let={job} label="Title"><%= job.title %></:col>
   <:col :let={job} label="Industry"><%= job.industry.name %></:col>
   <:col :let={job} label="Country"><%= job.country %></:col>
+  <:col :let={job} label="Published"><%= job.published %></:col>
   <:action :let={job}>
     <div class="sr-only">
       <.link navigate={~p"/jobs/#{job}"}>See More</.link>
@@ -36,7 +37,7 @@
   </:action>
 </.table>
 
-<.simple_form :let={f} for={@changeset} action={~p"/openings"} method="get">
+<.simple_form :let={f} for={@changeset} action={~p"/jobs"} method="get">
   Pagination
   Limit: 10
   Page: <%= Ecto.Changeset.get_field(@changeset, :page) %>/<%= ceil(@total / 10) %>
