--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,7 @@
-/* @import "tailwindcss/base";
+@import "tailwindcss/base";
 @import "tailwindcss/components";
-@import "tailwindcss/utilities"; */
+@import "tailwindcss/utilities";
+
+@import 'bulma/css/bulma.css'
 
 /* This file is for your main application CSS */
