--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,7 +1,7 @@
-@import "tailwindcss/base";
+/* @import "tailwindcss/base";
 @import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import "tailwindcss/utilities"; */
 
-@import 'bulma/css/bulma.css'
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 
 /* This file is for your main application CSS */
