--- a/lib/jobify_web/components/layouts/root.html.heex
+++ b/lib/jobify_web/components/layouts/root.html.heex
@@ -1,58 +1,82 @@
 <!DOCTYPE html>
 <html lang="en" class="[scrollbar-gutter:stable]">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="csrf-token" content={get_csrf_token()} />
-    <.live_title suffix=" · Phoenix Framework">
-      <%= assigns[:page_title] || "Jobify" %>
-    </.live_title>
-    <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
-    <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
-    </script>
-  </head>
-  <body class="navigation">
-    <ul class="relative z-10 flex items-center gap-4 px-4 sm:px-6 lg:px-8 justify-end">
-      <%= if @current_user do %>
-        <li class="text-[0.8125rem] leading-6 text-zinc-900">
-          <%= @current_user.email %>
-        </li>
-        <li>
-          <.link
-            href={~p"/users/settings"}
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
-          >
-            Settings
-          </.link>
-        </li>
-        <li>
-          <.link
-            href={~p"/users/log_out"}
-            method="delete"
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
-          >
-            Log out
-          </.link>
-        </li>
-      <% else %>
-        <li>
-          <.link
-            href={~p"/users/log_in"}
-            class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
-          >
-            Log in
-          </.link>
-        </li>
-      <% end %>
-      <li>
-        <.link
-          href={~p"/openings"}
-          class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
-        >
-          View Job Listings
-        </.link>
-      </li>
-    </ul>
-    <%= @inner_content %>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="csrf-token" content={get_csrf_token()} />
+  <.live_title suffix=" · Phoenix Framework">
+    <%= assigns[:page_title] || "Jobify" %>
+  </.live_title>
+  <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+  <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
+  </script>
+</head>
+
+<body class="navigation">
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="buttons">
+              <ul class="is-flex is-justify-content-left">
+                <li class="button has-background-primary is-light">
+                  <.link href={~p"/"} class="has-text-black">
+                    Home
+                  </.link>
+                </li>
+                <li class="button has-background-warning is-light">
+                  <.link href={~p"/openings"} class="has-text-black">
+                    Jobs
+                  </.link>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <div class="buttons">
+            <ul class="is-flex is-justify-content-right	">
+              <%= if @current_user do %>
+                <li class="">
+                  <%= @current_user.email %>
+                </li>
+                <li>
+                  <.link href={~p"/users/settings"}
+                    class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700">
+                    Settings
+                  </.link>
+                </li>
+                <li>
+                  <.link href={~p"/users/log_out"} method="delete"
+                    class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700">
+                    Log out
+                  </.link>
+                </li>
+                <% else %>
+                  <li class="button has-background-primary is-light">
+                    <.link href={~p"/users/log_in"} class="has-text-black">
+                      Log in
+                    </.link>
+                  </li>
+                  <% end %>
+                    <li class="button has-background-warning is-light">
+                      <.link href={~p"/openings"} class="has-text-black">
+                        View Job Listings
+                      </.link>
+                    </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <%= @inner_content %>
+</body>
+
+
 </html>
