--- a/lib/jobify_web/controllers/page_html/home.html.heex
+++ b/lib/jobify_web/controllers/page_html/home.html.heex
@@ -9,6 +9,13 @@
           <p class="subtitle-1">
             Find Your Dream Job and Company
           </p>
+          <p>
+            <li class="mt-5 button has-background-warning is-light">
+              <.link href={~p"/openings"} class="has-text-black">
+                View Job Listings
+              </.link>
+            </li>
+          </p>
           </div>
         </div>
       </section>
