--- a/lib/jobify_web/controllers/job_html/index.html.heex
+++ b/lib/jobify_web/controllers/job_html/index.html.heex
@@ -1,5 +1,9 @@
-<.header>
-  Listing Jobs
+<.header class="section is-flex is-justify-content-space-between">
+  <p class="title">
+  Admin Listing Jobs
+</p>
+<p class="subtitle-1">
+Here is a List of all Jobs in the Database</p>
   <:actions>
     <.link href={~p"/jobs/new"}>
       <.button>New Job</.button>
@@ -10,11 +14,11 @@
   </:actions>
 </.header>
 
-<.simple_form :let={f} for={@changeset} action={~p"/jobs"} method="get">
+<.simple_form :let={f} for={@changeset} action={~p"/jobs"} method="get" class="section is-flex is-justify-content-end	">
   <.input field={f[:page]} type="hidden" value="1"/>
   <.input field={f[:industry]} type="select" label="Industry" options={@industries}  prompt=" "/>
   <:actions>
-    <.button>Filter</.button>
+    <.button>Filter By Industry</.button>
   </:actions>
 </.simple_form>
 
@@ -38,22 +42,20 @@
 </.table>
 
 <.simple_form :let={f} for={@changeset} action={~p"/jobs"} method="get">
-  Pagination
-  Limit: 10
-  Page: <%= Ecto.Changeset.get_field(@changeset, :page) %>/<%= ceil(@total / 10) %>
+  <p class="subtitle-1 pl-5">Pagination Limit: 10 Page: <%= Ecto.Changeset.get_field(@changeset, :page) %>/<%= ceil(@total / 10) %> </p>
 <.input field={f[:industries]} type="hidden"/>
 
 <%= if (ceil(@total / 10) - Ecto.Changeset.get_field(@changeset, :page)) >= 1  do %>
   <.input field={f[:page]} type="hidden" value={Ecto.Changeset.get_field(@changeset, :page)+1}/>
-    <.button>
-      Next
+  <.button class="pagination-next is-light">
+    Next
     </.button>
 <% end %>
 
 <%= if (ceil(@total / 10) - Ecto.Changeset.get_field(@changeset, :page)) < 1  && ceil(@total / 10) > 1 do %>
   <.input field={f[:page]} type="hidden" value={Ecto.Changeset.get_field(@changeset, :page)-1}/>
-    <.button>
-      Back
+  <.button class="pagination-previous is-light">
+    Back
     </.button>
 <% end %>
 
