--- a/lib/jobify_web/controllers/job_html/edit.html.heex
+++ b/lib/jobify_web/controllers/job_html/edit.html.heex
@@ -1,8 +1,12 @@
-<.header>
-  Edit Job <%= @job.id %>
+<.header class="section is-flex is-justify-content-space-between">
+  <p class="title">
+    <%= @job.title %>
+  </p>
+
   <:subtitle>Use this form to manage job records in your database.</:subtitle>
 </.header>
 
-<.job_form changeset={@changeset} action={~p"/jobs/#{@job}"} industries={@industries}/>
+
+<.job_form changeset={@changeset} action={~p"/jobs/#{@job}"} industries={@industries} />
 
 <.back navigate={~p"/jobs"}>Back to jobs</.back>
