--- a/lib/jobify_web/controllers/job_html/job_form.html.heex
+++ b/lib/jobify_web/controllers/job_html/job_form.html.heex
@@ -1,4 +1,4 @@
-<.simple_form :let={f} for={@changeset} action={@action}>
+<.simple_form :let={f} for={@changeset} action={@action} class="container is-max-desktop">
   <.error :if={@changeset.action}>
     Oops, something went wrong! Please check the errors below.
   </.error>
