--- a/lib/jobify_web/controllers/industry_html/new.html.heex
+++ b/lib/jobify_web/controllers/industry_html/new.html.heex
@@ -1,5 +1,7 @@
-<.header>
-  New Industry
+<.header class="section is-flex is-justify-content-space-between">
+  <p class="title">
+   Add a New Industry
+  </p>
   <:subtitle>Use this form to manage industry records in your database.</:subtitle>
 </.header>
 
